[gd_scene load_steps=7 format=3 uid="uid://dax066aqaf87a"]

[ext_resource type="Script" path="res://Scripts/level_1.gd" id="1_c7jmu"]
[ext_resource type="PackedScene" uid="uid://bt7qi81p7hren" path="res://Scenes/tile_map.tscn" id="2_l2bg6"]
[ext_resource type="Script" path="res://Scripts/Path2D_Level_2.gd" id="3_cvjvi"]
[ext_resource type="PackedScene" uid="uid://dg1fw7is7vt36" path="res://Scenes/tank_1.tscn" id="4_xspmy"]
[ext_resource type="PackedScene" uid="uid://jutvao4o135e" path="res://Scenes/ui.tscn" id="5_jlhrc"]

[sub_resource type="Curve2D" id="Curve2D_wg5eg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 4, 290, 0, 0, 0, 0, 165, 174, 0, 0, 0, 0, 336, 175, 0, 0, 0, 0, 557, 478, 0, 0, 0, 0, 805, 482, 0, 0, 0, 0, 1004, 283, 0, 0, 0, 0, 1152, 281)
}
point_count = 7

[node name="Level" type="Node2D"]
script = ExtResource("1_c7jmu")

[node name="TileMap" parent="." instance=ExtResource("2_l2bg6")]
position = Vector2(0, 0)
layer_0/tile_data = PackedInt32Array(262144, 65536, 4, 262145, 65536, 4, 327681, 65536, 5, 327680, 65536, 5, 393215, 0, 5, 327679, 0, 4, 262143, 0, 3, 196608, 262144, 4, 196609, 65536, 4, 262146, 196608, 3, 327682, 131072, 5, 196610, 65536, 4, 131073, 262144, 4, 131074, 65536, 4, 196611, 196608, 3, 131075, 65536, 4, 262147, 131072, 5, 65538, 65536, 3, 65539, 65536, 3, 131076, 65536, 4, 65540, 65536, 3, 196612, 262144, 3, 65541, 65536, 3, 131077, 65536, 4, 196613, 65536, 4, 131078, 131072, 4, 196614, 196608, 4, 262150, 65536, 4, 262149, 262144, 3, 262148, 0, 5, 196615, 131072, 3, 262151, 196608, 4, 327687, 65536, 4, 327686, 262144, 3, 327685, 262144, 5, 327688, 196608, 4, 393224, 65536, 4, 393223, 65536, 4, 393222, 0, 4, 458760, 65536, 4, 458759, 262144, 3, 458758, 0, 5, 393225, 196608, 4, 458761, 65536, 4, 327689, 131072, 3, 458762, 65536, 4, 524298, 65536, 5, 524297, 65536, 5, 524296, 65536, 5, 458763, 65536, 4, 524299, 65536, 5, 458764, 65536, 4, 524300, 65536, 5, 393228, 262144, 4, 458765, 196608, 3, 524301, 131072, 5, 393229, 65536, 4, 393230, 196608, 3, 393231, 131072, 5, 327694, 65536, 4, 327695, 196608, 3, 327693, 262144, 4, 262158, 262144, 4, 262159, 65536, 4, 196622, 0, 3, 196623, 65536, 3, 262160, 65536, 4, 196624, 65536, 3, 327692, 0, 3, 524295, 0, 5, 65537, 0, 3, 262152, 0, 5, 65542, 131072, 3, 131079, 0, 5, 131080, 131072, 5, 65543, 0, 3, 65544, 131072, 3, 131081, 0, 5, 131082, 131072, 5, 65545, 0, 3, 65546, 131072, 3, 131083, 0, 5, 131084, 131072, 5, 65547, 0, 3, 65548, 131072, 3, 131085, 0, 5, 131086, 131072, 5, 65549, 0, 3, 65550, 131072, 3, 524287, 262144, 5, 458752, 262144, 5, 458751, 262144, 5, 393216, 262144, 5, 458753, 262144, 5, 458754, 262144, 5, 393217, 262144, 5, 393218, 262144, 5, 393219, 262144, 5, 393220, 262144, 5, 327683, 262144, 5, 327684, 262144, 5, 524291, 917504, 5, 524292, 917504, 5, 458755, 262144, 5, 458756, 262144, 5, 393221, 262144, 5, 524293, 262144, 5, 524294, 262144, 5, 458757, 262144, 5, 655359, 262144, 5, 589824, 262144, 5, 589823, 262144, 5, 524288, 262144, 5, 589825, 262144, 5, 589826, 262144, 5, 524289, 262144, 5, 524290, 262144, 5, 655363, 262144, 5, 655364, 262144, 5, 589827, 262144, 5, 589828, 262144, 5, 655365, 262144, 5, 655366, 262144, 5, 589829, 262144, 5, 589830, 262144, 5, 655367, 262144, 5, 655368, 262144, 5, 589831, 262144, 5, 589832, 262144, 5, 655369, 262144, 5, 655370, 262144, 5, 589833, 262144, 5, 589834, 262144, 5, 655371, 262144, 5, 655372, 262144, 5, 589835, 262144, 5, 589836, 262144, 5, 655373, 262144, 5, 655374, 262144, 5, 589837, 262144, 5, 589838, 262144, 5, 655375, 262144, 5, 655376, 262144, 5, 589839, 262144, 5, 589840, 262144, 5, 655377, 262144, 5, 655378, 262144, 5, 589841, 262144, 5, 589842, 262144, 5, 524302, 262144, 5, 524303, 262144, 5, 458766, 262144, 5, 524304, 262144, 5, 524305, 262144, 5, 458767, 262144, 5, 458768, 262144, 5, 458769, 262144, 5, 262153, 131072, 5, 196616, 0, 3, 196617, 131072, 3, 262156, 0, 5, 262157, 131072, 5, 196620, 0, 3, 196621, 131072, 3, 262154, 0, 5, 262155, 131072, 5, 196618, 0, 3, 196619, 131072, 3, 393226, 0, 5, 393227, 131072, 5, 327690, 0, 3, 327691, 131072, 3, 196607, 0, 5, 131072, 131072, 5, 131071, 0, 3, 65536, 131072, 3, 786431, 262144, 5, 720896, 262144, 5, 720895, 262144, 5, 655360, 262144, 5, 720897, 262144, 5, 720898, 262144, 5, 655361, 262144, 5, 655362, 262144, 5, 458770, 0, 5, 458771, 131072, 5, 393234, 0, 3, 393235, 131072, 3, 524306, 0, 5, 524307, 131072, 5, 327696, 65536, 5, 327697, 65536, 5, 327698, 131072, 5, 262161, 65536, 4, 262162, 131072, 4, 196625, 0, 5, 196626, 131072, 5, 131089, 0, 3, 131090, 131072, 3, 65553, 0, 5, 65554, 131072, 5, 17, 0, 3, 18, 131072, 3, 65551, 0, 5, 65552, 131072, 5, 15, 0, 3, 16, 131072, 3, 13, 0, 5, 14, 131072, 5, -65523, 0, 3, -65522, 131072, 3, 11, 0, 5, 12, 131072, 5, -65525, 0, 3, -65524, 131072, 3, 9, 0, 5, 10, 131072, 5, -65527, 0, 3, -65526, 131072, 3, 7, 0, 5, 8, 131072, 5, -65529, 0, 3, -65528, 131072, 3, 5, 0, 5, 6, 131072, 5, -65531, 0, 3, -65530, 131072, 3, 3, 0, 5, 4, 131072, 5, -65533, 0, 3, -65532, 131072, 3, 1, 0, 5, 2, 131072, 5, -65535, 0, 3, -65534, 131072, 3, 65535, 0, 5, 0, 131072, 5, -1, 0, 3, -65536, 131072, 3, 131087, 0, 5, 131088, 131072, 5, 393232, 0, 5, 393233, 131072, 5, -65521, 0, 5, -65520, 131072, 5, -131057, 0, 3, -131056, 131072, 3, -65519, 0, 5, -65518, 131072, 5, -131055, 0, 3, -131054, 131072, 3, 458750, 262144, 5, 720899, 262144, 5, 720900, 262144, 5, 720901, 262144, 5, 720902, 262144, 5, 720903, 262144, 5, 720904, 262144, 5, 720905, 262144, 5, 720906, 262144, 5, 720907, 262144, 5, 720908, 262144, 5, 720910, 262144, 5, 720911, 262144, 5, 720909, 262144, 5, 720912, 262144, 5, 720913, 262144, 5, 720914, 262144, 5)

[node name="Path" type="Node2D" parent="."]
script = ExtResource("3_cvjvi")

[node name="PathSpawner" type="Timer" parent="Path"]
wait_time = 3.0
autostart = true

[node name="Path2D" type="Path2D" parent="Path/PathSpawner"]
curve = SubResource("Curve2D_wg5eg")

[node name="PathFollow2D" type="PathFollow2D" parent="Path/PathSpawner/Path2D"]
position = Vector2(4, 290)
rotation = -0.62435
loop = false

[node name="Tank 1" parent="Path/PathSpawner/Path2D/PathFollow2D" instance=ExtResource("4_xspmy")]

[node name="Towers" type="Node" parent="."]

[node name="UI" parent="." instance=ExtResource("5_jlhrc")]

[connection signal="connectEnemy" from="Path" to="." method="_on_path_connect_enemy"]
[connection signal="timeout" from="Path/PathSpawner" to="Path" method="_on_path_spawner_timeout"]
[connection signal="dealtPlayerDamage" from="Path/PathSpawner/Path2D/PathFollow2D/Tank 1" to="UI" method="_on_tank_1_dealt_player_damage"]
[connection signal="died" from="Path/PathSpawner/Path2D/PathFollow2D/Tank 1" to="UI" method="_on_tank_1_died"]
